--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <a id="pris" class="anchor" href="#pris" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://conorobrien-foxx.github.io/Assorted-Programming-Languages/pris.html">Pris</a>
 </h1>
 
+<h1>
+<a id="oration" class="anchor" href="#oration" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://rikerw.github.io/">Oration Online, with Skulpt, by RikerW</a>
+</h1>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ConorOBrien-Foxx/Assorted-Programming-Languages">Assorted-programming-languages</a> is maintained by <a href="https://github.com/ConorOBrien-Foxx">ConorOBrien-Foxx</a>.</span>
 
