--- a/jump.html
+++ b/jump.html
@@ -4,7 +4,7 @@
 	<title>jump</title>
 	<meta charset="UTF-8">
 	<script src="boxify.js"></script>
-	<script src="jump.js"></script>
+	<script src="https://rawgit.com/ConorOBrien-Foxx/Assorted-Programming-Languages/gh-pages/jump.js"></script>
 	<link rel="STYLESHEET" href="jump.css">
 </head>
 <body>
