--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 </h1>
 
 <h1>
-<a id="oration" class="anchor" href="#oration" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://rikerw.github.io/">Oration Online, with Skulpt, by RikerW</a>
+<a id="reng" class="anchor" href="#reng" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://conorobrien-foxx.github.io/Assorted-Programming-Languages/reng.html">Reng</a>
+</h1>
+
+<h1>
+<a id="oration" class="anchor" href="#oration" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://rikerw.github.io/">Oration Online, with Skulpt, by RikerW [wip]</a>
 </h1>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ConorOBrien-Foxx/Assorted-Programming-Languages">Assorted-programming-languages</a> is maintained by <a href="https://github.com/ConorOBrien-Foxx">ConorOBrien-Foxx</a>.</span>
