--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 <h1>
 <a id="constant" class="anchor" href="#constant" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://conorobrien-foxx.github.io/Assorted-Programming-Languages/constant.html">Constant</a>
 </h1>
+
+<h1>
+<a id="dotKill" class="anchor" href="#dotKill" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://conorobrien-foxx.github.io/Assorted-Programming-Languages/dotKill.html">.kill();</a>
+</h1>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ConorOBrien-Foxx/Assorted-Programming-Languages">Assorted-programming-languages</a> is maintained by <a href="https://github.com/ConorOBrien-Foxx">ConorOBrien-Foxx</a>.</span>
 
